# e2a

./: .gitignore  configure.ac  skin.py
data/: Makefile.am  keymap.xml  menu.xml  setup.xml  skin.xml
lib/python/Plugins/SystemPlugins/: Makefile.am
lib/python/Plugins/SystemPlugins/3GModemManager/: plugin.py
lib/python/Plugins/SystemPlugins/Blindscan/: plugin.py
lib/python/Plugins/SystemPlugins/CableScan/: Makefile.am
lib/python/Plugins/SystemPlugins/DeviceManager/: plugin.py
lib/python/Plugins/SystemPlugins/FPGAUpgrade/: plugin.py
lib/python/Plugins/SystemPlugins/FastScan/: Makefile.am
lib/python/Plugins/SystemPlugins/FirmwareUpgrade/: plugin.py
lib/python/Plugins/SystemPlugins/HDMICEC/: plugin.py
lib/python/Plugins/SystemPlugins/ManualFancontrol/: plugin.py
lib/python/Plugins/SystemPlugins/NetworkWizard/: NetworkWizard.py  networkwizard.xml
lib/python/Plugins/SystemPlugins/RemoteControlCode/: plugin.py
lib/python/Plugins/SystemPlugins/SoftwareManager/: plugin.py
lib/python/Plugins/SystemPlugins/TransCodingSetup/: plugin.py
lib/python/Plugins/SystemPlugins/UIPositionSetup/: plugin.py
lib/python/Plugins/SystemPlugins/Videomode/: VideoHardware.py  VideoWizard.py
lib/python/Plugins/SystemPlugins/WirelessLan/: Wlan.py  plugin.py
lib/python/Plugins/SystemPlugins/WirelessLanSetup/: plugin.py
lib/python/Plugins/SystemPlugins/ZappingModeSelection/: plugin.py
main/: Makefile.am  enigma.cpp
po/: ar.po  ca.po  cs.po  da.po  de.po  el.po  en.po  es.po  et.po  fi.po  fr.po  fy.po  hr.po  hu.po  is.po  it.po  lt.po  lv.po  nl.po  no.po  pl.po  (+8 more)
(+95 files in other folders)
