installdir = $(pkglibdir)/python/Plugins/SystemPlugins

SUBDIRS = SoftwareManager FrontprocessorUpgrade PositionerSetup Satfinder \
	SkinSelector SatelliteEquipmentControl Videomode VideoTune Hotplug \
	DefaultServicesScanner NFIFlash DiseqcTester CommonInterfaceAssignment \
	CrashlogAutoSubmit CableScan CleanupWizard VideoEnhancement WirelessLan NetworkWizard \
	TempFanControl FactoryTest FastScan Fancontrol FPGAUpgrade WirelessLanSetup ManualFancontrol \
	Blindscan RemoteControlCode UI3DSetup UIPositionSetup HDMICEC LEDBrightnessSetup \
	FirmwareUpgrade CrashReport 3GModemManager WirelessAccessPoint ZappingModeSelection \
	DeviceManager TransCodingSetup WOLSetup NetDrive AudioEffect

install_PYTHON =	\
	__init__.py
